@@ -64,24 +64,6 @@ KDE4_ADD_EXECUTABLE(rkward.frontend ${RKWard_Sources})
 SET_TARGET_PROPERTIES(rkward.frontend PROPERTIES
         MACOSX_BUNDLE_BUNDLE_NAME "RKWard")
 
-# wrapper script
-GET_DIRECTORY_PROPERTY(R_EXECUTABLE DIRECTORY rbackend DEFINITION R_EXECUTABLE)
-IF(WIN32)
-	SET(RKWARD_WRAPPER_TEMPLATE rkward.bat.in)
-	SET(RKWARD_WRAPPER_SCRIPT ${CMAKE_CURRENT_BINARY_DIR}/rkward.bat)
-# For now use wrapper binary on Windows, only, and only as an alternative to rkward.bat.
-# Will become standard startup mechanism on all platforms, in a later release
-	ADD_SUBDIRECTORY( wrapper )
-ELSE(WIN32)
-	SET(RKWARD_WRAPPER_TEMPLATE rkward.sh.in)
-	SET(RKWARD_WRAPPER_SCRIPT ${CMAKE_CURRENT_BINARY_DIR}/rkward)
-ENDIF(WIN32)
-CONFIGURE_FILE(
-	${RKWARD_WRAPPER_TEMPLATE}
-	${RKWARD_WRAPPER_SCRIPT}
-	@ONLY)
-ADD_DEPENDENCIES(rkward.frontend ${RKWARD_WRAPPER_SCRIPT})
-
 IF(Q_WS_MAC)
 	SET(RKWARD_INFOPLIST_TEMPLATE Info.plist.in)
 	SET(RKWARD_INFOPLIST_FILE ${CMAKE_SOURCE_DIR}/rkward/Info.plist)
@@ -93,6 +75,20 @@ ENDIF(Q_WS_MAC)
 
 TARGET_LINK_LIBRARIES(rkward.frontend ${KDE4_KDECORE_LIBS} windows ${RKWARD_ADDLIBS} agents dialogs plugin settings dataeditor core scriptbackends rbackend misc ktexteditor ${KDE4_KHTML_LIBS} ${KDE4_KFILE_LIBS} ${KDE4_KDEUI_LIBS} ${KDE4_KROSSCORE_LIBS} ${QT_QTSCRIPT_LIBRARY} ${QT_QTNETWORK_LIBRARY})
 
+# wrapper executable
+GET_DIRECTORY_PROPERTY(R_EXECUTABLE DIRECTORY rbackend DEFINITION R_EXECUTABLE)
+IF (WIN32)
+	SET (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
+ENDIF (WIN32)
+ADD_CUSTOM_COMMAND (OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/rkward.ico"
+			COMMAND cmake -E copy "${CMAKE_CURRENT_SOURCE_DIR}/icons/app-icon/rkward.ico"
+			"${CMAKE_CURRENT_BINARY_DIR}/rkward.ico")
+ADD_EXECUTABLE (rkward wrapper/rkward_startup_wrapper.cpp wrapper/rkward_windows_icon.rc rkward.ico)
+add_definitions ("-DR_EXECUTABLE=\\\"${R_EXECUTABLE}\\\"")
+TARGET_LINK_LIBRARIES(rkward ${QT_QTGUI_LIBRARY} ${QT_QTCORE_LIBRARY})
+
+ADD_DEPENDENCIES(rkward.frontend rkward)
+
 ########### install files ###############
 
 INSTALL(DIRECTORY plugins/ pages DESTINATION ${DATA_INSTALL_DIR}/rkward
@@ -102,12 +98,12 @@ INSTALL(FILES resource.ver rkwardui.rc rkconsolepart.rc DESTINATION ${DATA_INSTA
 
 IF(Q_WS_MAC)
 	INSTALL(TARGETS rkward.frontend DESTINATION ${BIN_INSTALL_DIR})
-	INSTALL(PROGRAMS ${RKWARD_WRAPPER_SCRIPT} DESTINATION ${BUNDLE_INSTALL_DIR}/${CPACK_BUNDLE_NAME}.app/Contents/MacOS)
+	INSTALL(TARGETS rkward DESTINATION ${BUNDLE_INSTALL_DIR}/${CPACK_BUNDLE_NAME}.app/Contents/MacOS)
 	INSTALL(FILES ${CMAKE_SOURCE_DIR}/rkward/icons/app-icon/rkward.icns DESTINATION ${BUNDLE_INSTALL_DIR}/${CPACK_BUNDLE_NAME}.app/Contents/Resources)
 	INSTALL(FILES ${RKWARD_INFOPLIST_FILE} DESTINATION ${BUNDLE_INSTALL_DIR}/${CPACK_BUNDLE_NAME}.app/Contents)
 ELSE(Q_WS_MAC)
 	INSTALL(TARGETS rkward.frontend DESTINATION ${LIBEXEC_INSTALL_DIR})
-	INSTALL(PROGRAMS ${RKWARD_WRAPPER_SCRIPT} DESTINATION ${BIN_INSTALL_DIR})
+	INSTALL(TARGETS rkward DESTINATION ${BIN_INSTALL_DIR})
 ENDIF(Q_WS_MAC)
 
 INSTALL(FILES rkward.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
