@@ -2,7 +2,7 @@
                           rkward_startup_wrapper  -  description
                              -------------------
     begin                : Sun Mar 10 2013
-    copyright            : (C) 2013 by Thomas Friedrichsmeier
+    copyright            : (C) 2013, 2014 by Thomas Friedrichsmeier
     email                : tfry@users.sourceforge.net
  ***************************************************************************/
 
@@ -26,9 +26,11 @@
 #include <QDir>
 #include <QProcess>
 #include <QSettings>
+#include <QUrl>
+#include <QFile>
 
-#ifndef RKWARD_REL_INSTALL_PATH
-#	define RKWARD_REL_INSTALL_PATH ""
+#ifndef RKWARD_FRONTEND_LOCATION
+#	define RKWARD_FRONTEND_LOCATION ""
 #endif
 
 #ifndef R_EXECUTABLE
@@ -49,15 +51,77 @@ QString findRKWardAtPath (const QString &path) {
 	return findExeAtPath ("rkward.frontend", path);
 }
 
+QString quoteCommand (const QString &orig) {
+#ifdef Q_WS_WIN
+	QString ret = "\"";
+	for (int i = 0; i < orig.size (); ++i) {
+		if (orig[i] == QLatin1Char ('"')) ret.append ("\"\"");
+		else if (orig[i] == QLatin1Char ('\\')) ret.append ("\\\\");
+		else ret.append (orig[i]);
+	}
+	ret.append (QLatin1Char ('"'));
+	return ret;
+#else
+	return orig;
+#endif
+}
+
+#ifndef Q_WS_WIN
+// see http://blog.qt.digia.com/blog/2006/03/16/starting-interactive-processes-with-qprocess/
+// Need an interactive process e.g. for running through gdb
+#	include <unistd.h>
+class InteractiveProcess : public QProcess {
+    static int stdinClone;
+public:
+    InteractiveProcess (QObject *parent = 0) : QProcess (parent) {
+        if (stdinClone == -1) stdinClone = ::dup (fileno(stdin));
+    }
+protected:
+    void setupChildProcess () {
+        ::dup2 (stdinClone, fileno(stdin));
+    }
+};
+int InteractiveProcess::stdinClone = -1;
+#else
+// no easy solution for Windows. But ain't Windows the world of graphical debuggers, anyway...
+#	define InteractiveProcess QProcess
+#endif
+
 int main (int argc, char *argv[]) {
 	QApplication app (argc, argv);
 	QStringList args = app.arguments ();
 	if (!args.isEmpty ()) args.pop_front ();	// The command itself
 
+	// Parse arguments that need handling in the wrapper
+	bool usage = false;
+	QString debugger_arg;
+	QString r_exe_arg;
+	int debug_level = 2;
+
+	for (int i=0; i < args.size (); ++i) {
+		if (args[i] == "--debugger") {
+			if ((i+1) < args.size ()) {
+				debugger_arg = args.takeAt (i + 1);
+			} else usage = true;
+			args.removeAt (i);
+			--i;
+		} else if (args[i] == "--r-executable") {
+			if ((i+1) < args.size ()) {
+				r_exe_arg = args.takeAt (i + 1);
+			} else usage = true;
+			args.removeAt (i);
+			--i;
+		} else if (args[i] == "--debug-level") {
+			if ((i+1) < args.size ()) {
+				debug_level = args[i+1].toInt ();
+			}
+		}
+	}
+
+	// Locate KDE and RKWard installations
 	QString kdeinit4_exe;
 	QString rkward_frontend_exe;
-	rkward_frontend_exe = findRKWardAtPath (app.applicationDirPath ());	// these two are for running directly from a build tree
-	if (rkward_frontend_exe.isNull ()) rkward_frontend_exe = findRKWardAtPath (QDir (app.applicationDirPath ()).filePath (".."));	// these two are for running directly from a build tree
+	rkward_frontend_exe = findRKWardAtPath (app.applicationDirPath ());	// this is for running directly from a build tree
 	if (rkward_frontend_exe.isNull ()) {	// this is for the regular case: startup wrapper is not in the same dir as rkward.frontend
 		QString kde4_config_exe;
 		kde4_config_exe = findExeAtPath ("kde4-config", QDir::currentPath ());
@@ -74,18 +138,25 @@ int main (int argc, char *argv[]) {
 #ifdef Q_WS_WIN
 		kdeinit4_exe = findExeAtPath ("kdeinit4", kde_dir.path ());
 		qputenv ("PATH", QString (kde_dir.path () + ";" + qgetenv ("PATH")).toLocal8Bit ());
+		if (debug_level > 3) qDebug ("Adding %s to the system path", qPrintable (kde_dir.path ()));
 #endif
 		// important if RKWard is not in KDEPREFIX/bin but e.g. KDEPREFIX/lib/libexec
 		qputenv ("RKWARD_ENSURE_PREFIX", kde_dir.path().toLocal8Bit ());
+		if (debug_level > 3) qDebug ("Setting environment variable RKWARD_ENSURE_PREFIX=%s", qPrintable (kde_dir.path ()));
 	
-		rkward_frontend_exe = findRKWardAtPath (kde_dir.absoluteFilePath ("bin"));
+		rkward_frontend_exe = findRKWardAtPath (RKWARD_FRONTEND_LOCATION);
+		if (rkward_frontend_exe.isNull ()) rkward_frontend_exe = findRKWardAtPath (kde_dir.absoluteFilePath ("bin"));
 		if (rkward_frontend_exe.isNull ()) rkward_frontend_exe = findRKWardAtPath (kde_dir.absoluteFilePath ("../lib/libexec"));
-		if (rkward_frontend_exe.isNull ()) rkward_frontend_exe = findRKWardAtPath (kde_dir.absoluteFilePath (RKWARD_REL_INSTALL_PATH));
 
 		if (rkward_frontend_exe.isNull ()) {
 			QMessageBox::critical (0, "RKWard frontend binary missing", "RKWard frontend binary could not be found. When moving / copying RKWard, make sure to copy the whole application folder, or create a shorcut / link, instead.");
 			exit (1);
 		}
+	}
+
+	if (usage) {
+		QProcess::execute (rkward_frontend_exe, QStringList ("--help"));
+		exit (1);
 	}
 
 #ifdef Q_WS_WIN
@@ -95,31 +166,6 @@ int main (int argc, char *argv[]) {
 	}
 	if (!kdeinit4_exe.isNull ()) QProcess::execute (kdeinit4_exe, QStringList ());
 #endif
-
-	bool usage = false;
-	QString debugger_arg;
-	QString r_exe_arg;
-
-	for (int i=0; i < args.size (); ++i) {
-		if (args[i] == "--debugger") {
-			if ((i+1) < args.size ()) {
-				debugger_arg = args.takeAt (i + 1);
-			} else usage = true;
-			args.removeAt (i);
-			--i;
-		} else if (args[i] == "--R") {
-			if ((i+1) < args.size ()) {
-				r_exe_arg = args.takeAt (i + 1);
-			} else usage = true;
-			args.removeAt (i);
-			--i;
-		}
-	}
-
-	if (usage) {
-		QProcess::execute (rkward_frontend_exe, QStringList ("--help"));
-		exit (1);
-	}
 
 	// Look for R:
 	//- command line parameter
@@ -131,6 +177,7 @@ int main (int argc, char *argv[]) {
 			QMessageBox::critical (0, "Specified R executable does not exist", QString ("The R executable specified on the command line (%1) does not exist or is not executable.").arg (r_exe));
 			exit (1);
 		}
+		if (debug_level > 3) qDebug ("Using R specified on command line");
 	} else {
 		QFileInfo frontend_info (rkward_frontend_exe);
 		QDir frontend_path = frontend_info.absoluteDir ();
@@ -147,6 +194,7 @@ int main (int argc, char *argv[]) {
 					exit (1);
 				}
 			}
+			if (debug_level > 3) qDebug ("Using R as configured in config file %s", qPrintable (rkward_ini_file.absoluteFilePath ()));
 		}
 		if (r_exe.isNull ()) {
 			r_exe = R_EXECUTABLE;
@@ -154,14 +202,31 @@ int main (int argc, char *argv[]) {
 				QMessageBox::critical (0, "Specified R executable does not exist", QString ("The R executable specified at compile time (%1) does not exist or is not executable. Probably the installation of R has moved. You can use the command line parameter '--R', or supply an rkward.ini file to specify the new location.").arg (r_exe));
 				exit (1);
 			}
+			if (debug_level > 3) qDebug ("Using R as configured at compile time");
 		}
 	}
 
 	qputenv ("R_BINARY", r_exe.toLocal8Bit ());
 	QStringList call_args ("CMD");
-	if (!debugger_arg.isNull ()) call_args.append (debugger_arg);
-	call_args.append (rkward_frontend_exe);
-	call_args.append (args);
-	
-	return (QProcess::execute (r_exe, call_args));
+	if (!debugger_arg.isNull ()) call_args.append (debugger_arg.split (" "));
+	call_args.append (quoteCommand (rkward_frontend_exe));
+
+	if (!args.isEmpty ()) {
+		// NOTE: QProcess quotes its arguments, *but* properly passing all spaces and quotes through the R CMD wrapper, seems near(?) impossible on Windows. Instead, we use percent encoding, internally.
+		for (int i = 0; i < args.size (); ++i) {
+			call_args.append (QString::fromUtf8 (QUrl::toPercentEncoding (args[i], QByteArray (), " \"")));
+		}
+	}
+
+	if (debug_level > 2) qDebug ("Starting frontend: %s %s", qPrintable (r_exe), qPrintable (call_args.join (" ")));
+
+	InteractiveProcess proc;
+	proc.setProcessChannelMode (QProcess::ForwardedChannels);
+	proc.start (quoteCommand (r_exe), call_args);
+	bool ok = proc.waitForFinished (-1);
+	if (proc.exitCode () || !ok) {
+		QMessageBox::critical (0, "Error starting RKWard", QString ("Starting RKWard failed with error \"%1\"").arg (proc.errorString ()));
+	}
+
+	return (0);
 }
