@@ -1,3 +1,6 @@
+- Fixed: Problems starting from paths with spaces in the file name on Windows
+- Added command line option --r-executable for switching between several installations of R
+- Use a binary wrapper, instead of wrapper shell script for startup on all platforms
 - Linear regression plugin gains option to save predicted values
 - Fixed some compilation problems
 - Add basic support to export plots using tikzDevice
